--- a/.github/workflows/conflicts.yml
+++ b/.github/workflows/conflicts.yml
@@ -5,9 +5,9 @@ on:
       - master
 jobs:
   triage:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
-      - uses: mschilde/auto-label-merge-conflicts@591722e97f3c4142df3eca156ed0dcf2bcd362bd
+      - uses: mschilde/auto-label-merge-conflicts@v2
         with:
           CONFLICT_LABEL_NAME: 'Merge Conflict'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
