--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -104,6 +104,7 @@ jobs:
         run: |
           sudo dpkg --add-architecture i386
           sudo apt update || true
+          sudo apt-get install gcc-multilib
           sudo apt-get install zlib1g-dev:i386
           bash tools/ci/install_rust_g.sh
       - name: Compile Tests
