--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   run_linters:
     name: Run Linters
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     concurrency:
       group: run_linters-${{ github.ref }}
       cancel-in-progress: true
@@ -19,7 +19,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/SpacemanDMM
-          key: ${{ runner.os }}-spacemandmm-${{ secrets.CACHE_PURGE_KEY }}
+          key: ${{ runner.os }}-spacemandmm-${{ hashFiles('dependencies.sh') }}
+          restore-keys: |
+            ${{ runner.os }}-spacemandmm-
       - name: Restore Yarn cache
         uses: actions/cache@v4
         with:
@@ -31,6 +33,7 @@ jobs:
             ${{ runner.os }}-
       - name: Install Tools
         run: |
+          sudo apt install -y python3-pip
           pip3 install setuptools
           bash tools/ci/install_node.sh
           bash tools/ci/install_spaceman_dmm.sh dreamchecker
